--- a/src/SubPages/Grundausbildung/Grundausbildung.scss
+++ b/src/SubPages/Grundausbildung/Grundausbildung.scss
@@ -1,7 +1,7 @@
 p {
   margin: 0;
 }
-.container {
+.fcontainer {
   font-family: Georgia, "Times New Roman", Times, serif;
   background-color: rgb(255, 240, 203);
   color: #D7A200;
