--- a/src/Main.scss
+++ b/src/Main.scss
@@ -11,6 +11,7 @@ $footerHeight: 220px;
         font-size: 20px;
         font-weight: bold;
         height: 50px;
+        padding: 0;
     } 
     .ant-menu-item
     {
