--- a/src/SubPages/Training/Training.scss
+++ b/src/SubPages/Training/Training.scss
@@ -14,6 +14,12 @@ p {
     text-align:left
     }
 
+    .title {
+      font-size: 24px;
+      margin-left: 10%;
+      margin-right: 15%;
+      width: 100%;
+    }
   .citeBox2 {
     font-size: 18px;
     margin-left: 10%;
