--- a/src/SubPages/UeberUns/UeberUns.scss
+++ b/src/SubPages/UeberUns/UeberUns.scss
@@ -2,7 +2,7 @@ p {
   margin: 0;
 }
 .container {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: BlacklightD, "Times New Roman", Times, serif;
   background-color: rgb(255, 240, 203);
   color: #D7A200;
   .center {
@@ -11,11 +11,13 @@ p {
   }
   
   .image35{
+    width: 20%;
     vertical-align: top;
     padding: 0;
   }
   
   .citeBox {
+    color: black;
     font-size: 10px;
     margin-left: 10px;
     margin-right: 5%;
