--- a/src/SubPages/Impressum/Impressum.scss
+++ b/src/SubPages/Impressum/Impressum.scss
@@ -11,7 +11,7 @@ p {
   }
   
   .image35{
-    width: 30%;
+    width: 90px;
     box-align: right;
     vertical-align: top;
     padding: 0;
@@ -19,12 +19,6 @@ p {
     
   }
   
-  .citeBox {
-    font-size: 10px;
-    margin-left: 10px;
-    margin-right: 5%;
-    //width: 25%;
-  }
   .author {
     margin-top: 4px;
     font-size: small;
