--- a/src/SubPages/Kontakt/Kontakt.scss
+++ b/src/SubPages/Kontakt/Kontakt.scss
@@ -15,19 +15,28 @@ p {
     box-align: right;
     vertical-align: top;
     padding: 0;
-
-    
+ 
   }
   
-  .citeBox {
-    font-size: 10px;
-    margin-left: 10px;
-    margin-right: 5%;
-    //width: 25%;
-  }
-  .author {
+/*   .link {
+    background-color: rgb(255, 240, 203);
+    font-family: BlacklightD, "Times New Roman", Times, serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #d7a200;
+    } */
+  
+/*     .link:visited{
+      background-color: rgb(255, 240, 203);
+      font-family: BlacklightD, "Times New Roman", Times, serif;
+      font-size: 14px;
+      font-weight: bold;
+      color: #d7a200;
+      } */
+    
+/*   .author {
     margin-top: 4px;
     font-size: small;
-  }
+  } */
 
 }
