--- a/src/SubPages/WelcomePage/WelcomePage.scss
+++ b/src/SubPages/WelcomePage/WelcomePage.scss
@@ -1,19 +1,6 @@
-p {
-  margin: 0;
-}
-.container {
-
-  .center {
-    text-align: center;
-    
-  }
-  .image{
-    width: 80%;
-  }
-  .citeBox {
-    font-size: 18px;
-    width: 100%
-    
-  }
-
+#welcomeIMG{
+  width: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
