--- a/src/SubPages/Gelaende/Gelaende.scss
+++ b/src/SubPages/Gelaende/Gelaende.scss
@@ -4,7 +4,7 @@ p {
 .container {
   font-family: Georgia, "Times New Roman", Times, serif;
   background-color: rgb(255, 240, 203);
-  color: #D7A200;
+    // color: #D7A200;
   .center {
     text-align: center;
     
@@ -19,14 +19,6 @@ p {
     box-align: center;
     vertical-align: top;
     padding: 0;
-  }
-  
-  .citeBox {
-    font-size: 10px;
-    margin-left: 10px;
-    margin-right: 5%;
-    text-align: left;
-    width: 90%;
   }
   .author {
     margin-top: 4px;
