--- a/src/SubPages/Training/Training.scss
+++ b/src/SubPages/Training/Training.scss
@@ -1,7 +1,7 @@
 p {
   margin: 0;
 }
-.container {
+.cc {
   font-family: Georgia, "Times New Roman", Times, serif;
   background-color: rgb(255, 240, 203);
   color: #D7A200;
@@ -16,16 +16,10 @@ p {
 
     .title {
       font-size: 24px;
-      margin-left: 10%;
-      margin-right: 15%;
       width: 100%;
+    
     }
-  .citeBox2 {
-    font-size: 18px;
-    margin-left: 10%;
-    margin-right: 15%;
-    width: 100%;
-  }
+
   .author {
     margin-top: 4px;
     font-size: small;
