--- a/src/SubPages/Kontakt/Kontakt.scss
+++ b/src/SubPages/Kontakt/Kontakt.scss
@@ -17,6 +17,16 @@ p {
     padding: 0;
  
   }
+
+
+
+
+.block
+ {
+  border: 2px solid blue;
+  padding: .5em;
+}
+
   
 /*   .link {
     background-color: rgb(255, 240, 203);
