--- a/src/Main.scss
+++ b/src/Main.scss
@@ -221,9 +221,14 @@ p {
 .footer2 {
   line-height: normal;
   background-color: rgb(255, 240, 203);
-  padding-left: 12%;
-  padding:10px 0 0 0;
-  margin: 10px 0 0 0;
+  padding:0 5px 0 5px ;
+  margin: 0 0 0 0;
+
+  display: block;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  bottom: 0px;
 }
 
 .alignRight {
