--- a/src/Main.scss
+++ b/src/Main.scss
@@ -197,7 +197,7 @@ p {
   margin: 0px;
   padding: 0px;
   font-size: 18px;
-  margin-left: 7%;
+  margin-left: 10px;
   padding-right: 15%;
   width: 100%;
   scroll-behavior: smooth;
@@ -210,12 +210,14 @@ p {
   font-size: 28px;
   color: #D7A200;
   width: 100%;
-  margin: 30px 0 0 0
+  margin: 30px 0 0 0;
+  margin-left: 10px;
 }
 
 .title {
   font-size: 20px;
   font-weight: bold;
+  margin-left: 10px;
 }
  
 
