--- a/src/Main.scss
+++ b/src/Main.scss
@@ -19,7 +19,7 @@ $footerHeight: 220px;
 #header {
   display: inline-block;
   width: 100%;
-  max-height: 120px;
+  // max-height: 120px;
   background-color: white;
   // background-color: rgb(255, 240, 203);
   //padding-right: 15px;
@@ -213,7 +213,7 @@ p {
   background-color: rgb(255, 240, 203);
   font-family: BlacklightD, "Times New Roman", Times, serif;
   // font-size: 14px;
-  font-weight: bold;
+  // font-weight: bold;
   color: #d7a200;
   }
 .header {
@@ -252,6 +252,13 @@ p {
   font-size: 20px;
   font-weight: bold;
   margin-left: 10px;
+}
+.titlegrossleft {
+  font-size: 25px;
+  font-weight: bold;
+  // color: #D7A200;
+  width: 100%;
+  margin: 0 0 0 0;
 }
 
 .titleleft {
